--- a/css/inner.css
+++ b/css/inner.css
@@ -14,7 +14,7 @@
 .instructions__pic span { position: absolute; top: 0; left: 0; width: 58px; height: 58px; line-height: 58px; text-align: center; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 46px; font-weight: bold; color: white; text-shadow: rgba(0, 0, 0, 0.26) 1px 1px 0; z-index: 10; }
 .instructions__pic img, .instructions__pic span { -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; }
 
-.instructions__pic-out { position: absolute; top: 0; left: 0; background: url('../img/icons-sad58bd8c50.png') 0 -223px no-repeat; width: 200px; height: 200px; z-index: 5; }
+.instructions__pic-out { position: absolute; top: 0; left: 0; background: url('../img/icons-s6297d82b36.png') 0 -790px no-repeat; width: 200px; height: 200px; z-index: 5; }
 
 .instructions__one, .instructions__four { background: #a9a555; }
 
@@ -39,3 +39,7 @@
 .steps__list .title { margin-bottom: 25px; font-size: 38px; color: #2c6871; }
 .steps__list .title span { color: #c85838; }
 .steps__list p { font-size: 15px; color: #2c6871; text-shadow: rgba(255, 255, 255, 0.3) 1px 1px 0; line-height: 1.4; }
+
+.profile { overflow: hidden; }
+
+.profile__photo { float: left; background: url('../img/icons-s6297d82b36.png') 0 0 no-repeat; width: 222px; height: 259px; }
