--- a/sass/inner.sass
+++ b/sass/inner.sass
@@ -102,3 +102,9 @@
 		color: $blue-dark
 		text-shadow: rgba(255,255,255,0.3) 1px 1px 0
 		line-height: 1.4
+//profile
+.profile
+	overflow: hidden
+.profile__photo
+	float: left
+	+sized-sprite($icons, photo)
