--- a/sass/inner.sass
+++ b/sass/inner.sass
@@ -123,7 +123,7 @@
 	float: right
 	width: 700px
 .profile__desc
-	margin-bottom: 30px 
+	margin-bottom: 40px 
 	font-size: 16px
 	color: $blue-dark
 	line-height: 1.5
@@ -151,3 +151,11 @@
 		top: 23px
 		right: -15px
 		+sized-sprite($icons, btn-name)
+.profile__country
+	strong
+		display: block
+		margin-bottom: 10px
+		font-size: 18px
+		color: $blue-dark
+.country-select
+	+sized-sprite($icons, select)
