--- a/css/inner.css
+++ b/css/inner.css
@@ -14,7 +14,7 @@
 .instructions__pic span { position: absolute; top: 0; left: 0; width: 58px; height: 58px; line-height: 58px; text-align: center; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 46px; font-weight: bold; color: white; text-shadow: rgba(0, 0, 0, 0.26) 1px 1px 0; z-index: 10; }
 .instructions__pic img, .instructions__pic span { -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; }
 
-.instructions__pic-out { position: absolute; top: 0; left: 0; background: url('../img/icons-s2b5d36660a.png') 0 -790px no-repeat; width: 200px; height: 200px; z-index: 5; }
+.instructions__pic-out { position: absolute; top: 0; left: 0; background: url('../img/icons-s102d5c93da.png') 0 -790px no-repeat; width: 200px; height: 200px; z-index: 5; }
 
 .instructions__one, .instructions__four { background: #a9a555; }
 
@@ -45,13 +45,17 @@
 .profile__photo { position: relative; float: left; width: 222px; height: 259px; }
 .profile__photo img { display: block; margin: 9px 0 0 9px; }
 
-.profile__photo-bg { position: absolute; top: 0; left: 0; background: url('../img/icons-s2b5d36660a.png') 0 0 no-repeat; width: 222px; height: 259px; }
+.profile__photo-bg { position: absolute; top: 0; left: 0; background: url('../img/icons-s102d5c93da.png') 0 0 no-repeat; width: 222px; height: 259px; }
 
 .profile__detail { float: right; width: 700px; }
 
-.profile__desc { margin-bottom: 30px; font-size: 16px; color: #2c6871; line-height: 1.5; }
-.profile__desc button { position: relative; top: -2px; margin-left: 12px; background: url('../img/icons-s2b5d36660a.png') 0 -2692px no-repeat; width: 16px; height: 16px; }
+.profile__desc { margin-bottom: 40px; font-size: 16px; color: #2c6871; line-height: 1.5; }
+.profile__desc button { position: relative; top: -2px; margin-left: 12px; background: url('../img/icons-s102d5c93da.png') 0 -3593px no-repeat; width: 16px; height: 16px; }
 
 .profile__name { position: relative; width: 232px; margin: -10px 0 15px -10px; }
 .profile__name input { width: 210px; height: 69px; padding: 0 10px; border-radius: 6px; border: 1px dashed #959595; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 55px; color: #2c6871; font-weight: bold; }
-.profile__name button { position: absolute; top: 23px; right: -15px; background: url('../img/icons-s2b5d36660a.png') 0 -2256px no-repeat; width: 27px; height: 28px; }
+.profile__name button { position: absolute; top: 23px; right: -15px; background: url('../img/icons-s102d5c93da.png') 0 -3211px no-repeat; width: 27px; height: 28px; }
+
+.profile__country strong { display: block; margin-bottom: 10px; font-size: 18px; color: #2c6871; }
+
+.country-select { background: url('../img/icons-s102d5c93da.png') 0 -2541px no-repeat; width: 286px; height: 40px; }
